--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>재윤이의 처음, 생일</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
-
+  <div>
+    <audio id="audio" autoplay controls>
+      <source src="bgm.mp3" type="audio/mp3">
+    </audio>
+  </div>
   <body>
-    <img src="01.jpg">
-    <img src="02.jpg">
+    <a href="https://naver.me/FKKxsh0j">
+      <img src="01.jpg">
+      <img src="02.jpg">
+    </a>
   </body>
 </html>
