--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </div>
   <body>
     <a href="https://naver.me/FKKxsh0j">
-      <img src="01.jpg">
-      <img src="02.jpg">
+      <img src="01.png">
+      <img src="05.png">
     </a>
   </body>
 </html>
